# minidlna-mp34

./: CMakeLists.txt  README.md  final_install.sh  minidlna-mp34.conf  minidlna-mp34.service  post_install.cmake  test-minidlna-mp34
etc/minidlna-mp34/: post_install.sh
etc/systemd/system/: minidlna-mp34.service
mp3-to-mp4/playerTemplate/: COPYING  player.html
mp3-to-mp4/playerTemplate (alternative)/: player.html
mp3-to-mp4/src/: CMakeLists.txt  ffmpegAdapter.cpp  ffmpegAdapter.h  fifo.h  log.h  main.cpp  mainArgs.h  mp3Metadata.h  mpxTool.cpp  mpxTool.h  playerPage.cpp  playerPage.h  rendering.cpp  rendering.h
mp3-to-mp4/src/ffmpeg/: cmdutils.c  cmdutils_hook.h  ffmpeg.c  ffmpeg_hook.c  ffmpeg_hook.h  ffmpeg_lib.c  ffmpeg_lib.h  ffmpeg_opt.c
src/: CMakeLists.txt  config_mp34.h.in  install_include.cmake  minidlna.c  scanner.c  scanner.h  upnpglobalvars.c  upnpglobalvars.h  upnphttp.c  upnphttp.h  upnpsoap.c
